<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">冰箱管理系统</string>
    <string name="change_server">修改服务地址</string>
    <string name="reload">重新加载</string>
    <string name="server_dialog_title">服务地址</string>
    <string name="server_dialog_message">填写你的 Flask 服务地址，例如 http://127.0.0.1:5000 或局域网地址 http://192.168.1.10:5000</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="error_title">暂时无法连接服务</string>
    <string name="error_message">请检查服务是否已启动，或者确认当前服务地址是否正确。</string>
    <string name="retry">重试</string>
</resources>
